...
    <string name="alert_invalid_data">Please complete all fields.</string>
    <string name="alert_invalid_url">Make sure you enter a valid URL.</string>
    <string name="text_article_author">Article Author</string>
    <string name="text_published_date">Published Date</string>
    <string name="text_topic">Topic</string>
    <string name="text_link">Link</string>
    <string name="login_error">Incorrect Email and/or Password</string>
    <string name="text_article_title">Article Title</string>
</resources>

