<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="text_team_1">Team 1</string>
    <string name="text_minus_button">Minus Button</string>
    <string name="text_score_start">0</string>
    <string name="text_plus_button">Plus Button</string>
    <string name="text_team_2">Team 2</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
</resources>
