...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:transitionName="swapImage"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            android:padding="8dp"
            android:layout_alignBottom="@id/sportsImage"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
...
